--- a/app/src/main/res/layout/fragment_delegate_products.xml
+++ b/app/src/main/res/layout/fragment_delegate_products.xml
@@ -68,8 +68,8 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:layout_margin="@dimen/_16sdp"
-                    android:id="@+id/search_arrow_image"
+                    android:padding="@dimen/_10sdp"
+                    android:id="@+id/searchProdImage"
                     app:srcCompat="@drawable/ic_btn_search_bar"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -82,13 +82,13 @@
                     android:imeOptions="actionSearch"
                     android:layout_margin="@dimen/_16sdp"
                     android:hint="@string/search"
-                    android:id="@+id/search_edit_text"
+                    android:id="@+id/searchProduct"
                     android:textColor="@color/black"
                     android:background="@null"
                     android:textAlignment="viewStart"
                     android:inputType="text"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/search_arrow_image"
+                    app:layout_constraintStart_toEndOf="@id/searchProdImage"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_width="0dp"
