--- a/app/src/main/res/layout/fragment_accountant_make_order.xml
+++ b/app/src/main/res/layout/fragment_accountant_make_order.xml
@@ -140,6 +140,7 @@
                 android:textSize="15sp"
                 android:textColorHint="@color/add_product_gray"
                 android:id="@+id/mobileNumberEdt"
+                android:inputType="phone"
                 android:textAlignment="viewStart"
                 app:backgroundTint="@color/text_grey"
                 android:layout_width="match_parent"
