--- a/app/src/main/res/layout/fragment_item_details.xml
+++ b/app/src/main/res/layout/fragment_item_details.xml
@@ -629,12 +629,14 @@
                     android:layout_height="match_parent">
 
 
-                    <com.google.android.gms.maps.MapView
+                    <ImageView
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
+                        app:srcCompat="@drawable/normal_image"
                         android:id="@+id/orderMap"
-                        android:layout_width="match_parent"
+                        android:scaleType="fitXY"
+                        android:layout_width="0dp"
                         android:layout_height="163dp"/>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
