--- a/app/src/main/res/layout/fragment_responsible_person.xml
+++ b/app/src/main/res/layout/fragment_responsible_person.xml
@@ -53,15 +53,20 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <androidx.core.widget.NestedScrollView
+    <!--<androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/topDetailsContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        >
-
+        >-->
+        <com.example.util.NestedScrollPaginationView
+            android:id="@+id/scrollingNestedScroll"
+            app:layout_constraintTop_toBottomOf="@+id/topDetailsContainer"
+            android:layout_width="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="0dp">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:paddingBottom="@dimen/_70sdp"
             android:layout_width="match_parent"
@@ -136,8 +141,7 @@
 
 
 
-    </androidx.core.widget.NestedScrollView>
-
+</com.example.util.NestedScrollPaginationView>
 
 
     <com.google.android.material.button.MaterialButton
