make order in accountant

--- a/app/src/main/res/layout/acc_product_select_item.xml
+++ b/app/src/main/res/layout/acc_product_select_item.xml
@@ -6,13 +6,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/itemContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/productImage"
             android:layout_width="@dimen/_45sdp"
             android:layout_height="@dimen/_45sdp"
@@ -20,7 +21,7 @@
             android:layout_marginTop="@dimen/_15sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_product" />
+            android:src="@color/grey_bg"/>
 
         <ImageView
             android:id="@+id/checked"
@@ -39,12 +40,27 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_5sdp"
-            android:text="الكترونيات"
+            android:text=""
             android:textAlignment="viewStart"
+            app:layout_constraintEnd_toStartOf="@+id/totalQuantityTxt"
             app:layout_constraintBottom_toBottomOf="@id/productImage"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/productImage"
             app:layout_constraintTop_toTopOf="@+id/productImage" />
+
+        <TextView
+            android:id="@+id/totalQuantityTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:text=""
+            android:textAlignment="viewStart"
+            app:layout_constraintBottom_toBottomOf="@id/store_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/store_name"
+            app:layout_constraintTop_toTopOf="@+id/store_name" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
