--- a/app/src/main/res/layout/fragment_acc_delegates.xml
+++ b/app/src/main/res/layout/fragment_acc_delegates.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:paddingBottom="@dimen/_70sdp"
-    tools:context=".admin.delegatesAccountants.fragments.DelegatesFragment">
-
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -24,9 +21,9 @@
             android:orientation="vertical">
 
             <include
-                layout="@layout/search_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                layout="@layout/search_layout"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -48,28 +45,27 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/centerText"
+                    android:id="@+id/accDelegateText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_4sdp"
                     android:fontFamily="@font/cairo_regular"
-                    android:text="@string/call_center"
+                    android:text="@string/delegate"
                     android:textColor="@color/text_black"
                     android:textSize="12sp" />
             </LinearLayout>
 
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/centerRecycler"
+                android:id="@+id/accDelegateRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_14sdp"
-                android:paddingBottom="@dimen/_70sdp" />
+                android:paddingBottom="@dimen/_70sdp"/>
 
 
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
