edit admin & delegate & accountant

--- a/app/src/main/res/layout/fragment_accountant_make_order.xml
+++ b/app/src/main/res/layout/fragment_accountant_make_order.xml
@@ -64,6 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_marginBottom="@dimen/_100sdp"
         android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_20sdp">
 
@@ -303,6 +304,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/shipping_fee"
+                android:inputType="number"
                 app:layout_constraintTop_toBottomOf="@+id/orderShippingFeeText"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -313,6 +315,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:visibility="gone"
             android:id="@+id/makeOrderPriceContainer"
             android:layout_marginTop="@dimen/_14sdp"
             android:layout_width="match_parent"
@@ -422,6 +425,19 @@
             android:id="@+id/chooseDelegate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
+        <TextView
+            android:textAlignment="viewStart"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/delegateSelectedName"
+            android:text="tst"
+            android:layout_marginStart="@dimen/_24sdp"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+
+            />
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
