--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -259,8 +259,10 @@
         <EditText
             android:id="@+id/describeProductEditText"
             android:gravity="top|start"
+            android:textAlignment="viewStart"
             android:paddingTop="10dp"
             android:padding="@dimen/_16sdp"
+            android:minHeight="@dimen/_100sdp"
             android:background="@null"
             android:textColor="@color/black_bold"
             android:layout_width="match_parent"
@@ -394,16 +396,25 @@
         app:cardCornerRadius="5dp"
         app:cardBackgroundColor="@color/orange_color"
         android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/storeClassificationTxt"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:layout_gravity="center"
-            android:textColor="@color/white"
-            android:drawableStart="@drawable/ic_side_arrow"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:text="@string/save_store"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:minHeight="@dimen/_32sdp"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent">
+          <TextView
+              android:textAlignment="viewStart"
+              android:id="@+id/storeClassificationTxt"
+              android:layout_marginEnd="@dimen/_10sdp"
+              android:textColor="@color/white"
+              android:drawableStart="@drawable/ic_side_arrow"
+              android:layout_marginStart="@dimen/_10sdp"
+              android:text="@string/save_store"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              app:layout_constraintTop_toTopOf="parent"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"/>
+      </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
     <TextView
