--- a/app/src/main/res/layout/fragment_delegate_make_order.xml
+++ b/app/src/main/res/layout/fragment_delegate_make_order.xml
@@ -65,6 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_marginBottom="@dimen/_50sdp"
         android:layout_marginStart="@dimen/_24sdp"
         android:layout_marginEnd="@dimen/_24sdp">
 
