--- a/app/src/main/res/layout/fragment_clients_details.xml
+++ b/app/src/main/res/layout/fragment_clients_details.xml
@@ -317,6 +317,25 @@
 
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/editClientsButton"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50sdp"
+                android:layout_marginStart="@dimen/_16sdp"
+                android:layout_marginTop="@dimen/_24sdp"
+                android:layout_marginEnd="@dimen/_16sdp"
+                android:enabled="false"
+                android:gravity="center"
+                android:text="@string/edit"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:backgroundTint="@color/orange_color"
+                app:cornerRadius="7dp"
+                />
+
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/deleteClientsBtn"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -324,7 +343,7 @@
                 android:layout_marginStart="@dimen/_16sdp"
                 android:layout_marginEnd="@dimen/_16sdp"
                 android:layout_marginTop="@dimen/_24sdp"
-                android:layout_marginBottom="@dimen/_100sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
                 app:backgroundTint="@color/logout_red"
                 app:cornerRadius="7dp"
                 android:text="@string/delete"
