--- a/app/src/main/res/layout/fragment_edit_product.xml
+++ b/app/src/main/res/layout/fragment_edit_product.xml
@@ -42,7 +42,7 @@
             <TextView
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginStart="@dimen/_18sdp"
-                android:text="@string/add_product"
+                android:text="@string/edit_product"
                 android:textSize="@dimen/_18sdp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
