--- a/app/src/main/res/layout/fragment_call_center.xml
+++ b/app/src/main/res/layout/fragment_call_center.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/_70sdp"
-    tools:context=".admin.delegatesAccountants.fragments.DelegatesFragment">
+    tools:context=".accountant.delegatecallcenter.fragments.CallCenterFragment">
 
 
     <androidx.core.widget.NestedScrollView
