--- a/app/src/main/res/layout/fragment_admin_specical_customersragment.xml
+++ b/app/src/main/res/layout/fragment_admin_specical_customersragment.xml
@@ -100,9 +100,13 @@
                         android:layout_marginStart="@dimen/_16sdp"
                         />
 
-                    <TextView
+                    <EditText
                         android:textAlignment="viewStart"
-                        android:text="@string/search"
+                        android:id="@+id/searchTextEdit"
+                        android:hint="@string/search"
+                        android:imeOptions="actionSearch"
+                        android:background="@null"
+                        android:inputType="text"
                         android:textSize="14sp"
                         android:textColor="@color/search_text"
                         android:layout_marginStart="@dimen/_10sdp"
