debts list , update remove

--- a/app/src/main/res/layout/aac_delegate_wallet_item.xml
+++ b/app/src/main/res/layout/aac_delegate_wallet_item.xml
@@ -47,7 +47,7 @@
                 android:layout_marginStart="@dimen/_8sdp"
                 android:layout_marginEnd="@dimen/_4sdp"
                 android:textAlignment="viewStart"
-                android:text="اسم المنتج"
+                android:text=""
                 android:fontFamily="@font/cairo_semibold"
                 android:textColor="@color/black_bold"
                 android:textSize="14sp"
@@ -60,7 +60,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_8sdp"
-                android:text="تم القبول"
+                android:text=""
                 android:fontFamily="@font/cairo_regular"
                 android:textSize="12sp"
                 android:textColor="@color/login_gray"
@@ -87,7 +87,7 @@
                 android:id="@+id/walletProdQuantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2"
+                android:text=""
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/walletProdName"
@@ -101,7 +101,7 @@
                 android:id="@+id/walletProdPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1000"
+                android:text=""
                 android:textColor="@color/login_gray"
                 android:fontFamily="@font/ffshamelfamily_sansonebold"
                 android:textStyle="bold"
@@ -115,7 +115,7 @@
                 android:id="@+id/walletProdCurrancy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="رس"
+                android:text=""
                 android:textSize="12sp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:textColor="@color/login_gray"
