--- a/app/src/main/res/layout/fragment_acc_delegate_details.xml
+++ b/app/src/main/res/layout/fragment_acc_delegate_details.xml
@@ -18,95 +18,94 @@
         android:layout_height="0dp"
         tools:context=".admin.storesproducts.AdminStoresProductActivity">
 
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayoutId"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorOrange55"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent"
+            >
 
-            <com.google.android.material.appbar.CollapsingToolbarLayout
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appBarLayoutId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/_10sdp"
-                android:fitsSystemWindows="true"
-                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
+                android:background="@color/colorOrange55"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-
-
-
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <com.google.android.material.appbar.CollapsingToolbarLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/backDelegate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_24sdp"
-                        android:layout_marginTop="@dimen/_24sdp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_ab_back_light" />
-
-                    <TextView
-                        android:id="@+id/delegate_name"
-                        android:text="@string/delegate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:textSize="25sp"
-                        android:textColor="@color/textColor"
-                        android:fontFamily="@font/ffshamelfamily_sansonebold"
-                        android:layout_marginStart="@dimen/_24sdp"
-                        android:layout_marginTop="@dimen/_16sdp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/backDelegate"
-
-                        />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="@dimen/_10sdp"
+                    android:fitsSystemWindows="true"
+                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
 
 
 
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/backDelegate"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_24sdp"
+                            android:layout_marginTop="@dimen/_24sdp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/ic_ab_back_light" />
+
+                        <TextView
+                            android:id="@+id/delegate_name"
+                            android:text="@string/delegate"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:textSize="25sp"
+                            android:textColor="@color/textColor"
+                            android:fontFamily="@font/ffshamelfamily_sansonebold"
+                            android:layout_marginStart="@dimen/_24sdp"
+                            android:layout_marginTop="@dimen/_16sdp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/backDelegate"
+
+                            />
 
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/accDelegateDetailsTab"
-                android:layout_width="match_parent"
-                app:tabSelectedTextColor="@color/textColor"
-                app:tabTextColor="@color/textColor70"
-                android:background="@android:color/transparent"
-                android:layout_marginTop="@dimen/_16sdp"
-                app:tabIndicatorHeight="5dp"
-                app:tabIndicatorColor="@color/textColor"
-                app:tabMode="fixed"
-                android:layout_height="@dimen/_35sdp">
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-            </com.google.android.material.tabs.TabLayout>
+
+                </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
-        </com.google.android.material.appbar.AppBarLayout>
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/accDelegateDetailsTab"
+                    android:layout_width="match_parent"
+                    app:tabSelectedTextColor="@color/textColor"
+                    app:tabTextColor="@color/textColor70"
+                    android:background="@android:color/transparent"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    app:tabIndicatorHeight="5dp"
+                    app:tabIndicatorColor="@color/textColor"
+                    app:tabMode="fixed"
+                    android:layout_height="@dimen/_35sdp">
 
 
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/nestedScrollView"
-            android:layout_width="match_parent"
-            android:fillViewport="true"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                </com.google.android.material.tabs.TabLayout>
+
+
+            </com.google.android.material.appbar.AppBarLayout>
 
 
             <LinearLayout
+                app:layout_constraintTop_toBottomOf="@+id/appBarLayoutId"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:orientation="vertical">
 
                 <androidx.viewpager2.widget.ViewPager2
@@ -115,7 +114,13 @@
                     android:layout_height="match_parent" />
 
             </LinearLayout>
-        </androidx.core.widget.NestedScrollView>
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 
 
 
