--- a/app/src/main/res/layout/activity_accountant_home.xml
+++ b/app/src/main/res/layout/activity_accountant_home.xml
@@ -424,7 +424,61 @@
                 </com.google.android.material.card.MaterialCardView>
 
                 <!-- Column 2 -->
+
                 <com.google.android.material.card.MaterialCardView
+                    android:layout_width="0dp"
+                    android:id="@+id/accountantCreateDebts"
+                    android:layout_height="133dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    app:cardCornerRadius="5dp"
+                    android:layout_marginTop="19dp"
+                    android:layout_marginBottom="19dp"
+                    android:layout_marginStart="@dimen/_7sdp"
+                    >
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:layout_marginStart="@dimen/_10sdp"
+                        >
+
+                        <ImageView
+                            android:id="@+id/accountantCreateDebtsImg"
+                            android:layout_marginTop="5dp"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/ic_delivery"
+
+                            />
+
+                        <TextView
+                            android:id="@+id/accountantCreateDebtsText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="center"
+                            android:gravity="center"
+                            android:fontFamily="@font/ffshamelfamily_sansonebold"
+                            android:textStyle="bold"
+                            android:textSize="14sp"
+                            android:textColor="@color/textColor"
+                            android:text="@string/createDebts"
+                            android:layout_marginBottom="10dp"
+                            />
+
+
+
+
+                    </LinearLayout>
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                    android:visibility="gone"
                     android:layout_width="0dp"
                     android:id="@+id/accountantDeliveryCard"
                     android:layout_height="133dp"
@@ -475,8 +529,6 @@
                     </LinearLayout>
 
                 </com.google.android.material.card.MaterialCardView>
-
-
 
 
             </GridLayout>
