--- a/app/src/main/res/layout/responsible_person_item.xml
+++ b/app/src/main/res/layout/responsible_person_item.xml
@@ -24,7 +24,7 @@
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
             android:layout_marginStart="@dimen/_16sdp"
-            android:src="@color/grey_bg"
+            android:src="@drawable/clients_img"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/doneImg"
             app:layout_constraintTop_toTopOf="parent" />
@@ -47,7 +47,7 @@
             android:id="@+id/personName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="احمد حازم"
+            android:text=""
             android:fontFamily="@font/cairo_semibold"
             android:textColor="@color/textColor"
             android:textSize="15sp"
@@ -63,7 +63,7 @@
             android:id="@+id/personPhone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="+966 56784 9876"
+            android:text=""
             android:textSize="12sp"
             android:textColor="@color/text_black"
             android:layout_marginEnd="@dimen/_4sdp"
